# recruit-loop-agent

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/agents/: graph.py  nodes.py  state.py
app/api/: candidates.py  dashboard.py  outreach.py  pipelines.py  positions.py  router.py  scheduler.py  skills.py  system.py
app/core/: config.py  exception_handler.py  exceptions.py  llm_client.py  logging.py
app/database/: session.py
app/docs/: api_test_report.md
app/models/: agent_run.py  candidate.py  node_log.py  outreach_log.py  pipeline.py  position.py  scheduler_job.py  skill.py  system_config.py
app/repositories/: agent_run.py  candidate.py  node_log.py  outreach_log.py  pipeline.py  position.py  scheduler_job.py
app/schemas/: agent_run.py  candidate.py  node_log.py  outreach_log.py  pipeline.py  position.py  scheduler_job.py
app/services/: candidate.py  dashboard.py  email.py  health.py  pipeline.py  position.py  runner.py  scheduler.py  score.py  search.py
app/skills/: base.py  github.py  registry.py
app/tests/: __init__.py  conftest.py  generate_report.py  test_candidates.py  test_dashboard.py  test_outreach.py  test_pipelines.py  test_positions.py  test_scheduler.py  test_skills.py  test_system.py
docs/: api_test_report.md  loop-agent-cli.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/components/: CandidateTable.js  LoadingSpinner.js  PositionCard.js
frontend/src/hooks/: useApi.js
frontend/src/services/: api.js
loop_agent_cli/: __init__.py  cli.py  container.py
scripts/: deploy.sh  git-push.sh  start_app.sh  start_frontend.sh
(+7 files in other folders)
