[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-agent-cli"
version = "0.1.0"
description = "Typer + Rich CLI for recruit-loop-agent — run recruiting loops from the terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Chandler Song", email = "275737875@qq.com"},
]
keywords = ["recruiting", "agent", "cli", "typer", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.104.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "langgraph>=0.0.40",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
]

[project.scripts]
loop-agent = "loop_agent_cli.cli:app"

[project.urls]
Homepage = "https://github.com/Chandler-Song/recruit-loop-agent"
Repository = "https://github.com/Chandler-Song/recruit-loop-agent"
Issues = "https://github.com/Chandler-Song/recruit-loop-agent/issues"

[tool.setuptools.packages.find]
include = ["loop_agent_cli*", "app*"]
exclude = ["app.tests*", "frontend*", "venv*"]

[tool.setuptools.package-data]
"*" = ["*.py"]
